# PyNGL

./: README.md  coverage.xml  pyproject.toml  sonar-project.properties
.github/workflows/: sonar-scan.yml  uv.yml
src/ngl/: __init__.py  abstract_vao.py  base_mesh.py  bbox.py  first_person_camera.py  image.py  mat2.py  mat3.py  mat4.py  multi_buffer_vao.py  obj.py  obj.pyi  primitives.py  pyside_event_handling_mixin.py  quaternion.py  random.py  shader.py  shader_lib.py  shader_program.py  simple_index_vao.py  simple_vao.py  text.py  texture.py  vec2.py  vec3.py  vec4.py
src/ngl/shaders/: text_fragment.glsl  text_geometry.glsl  text_vertex.glsl
tests/: test_base_mesh.py  test_bbox.py  test_bezier_curve.py  test_first_person_camera.py  test_image.py  test_logging.py  test_mat2.py  test_mat3.py  test_mat4.py  test_obj.py  test_plane.py  test_primitives.py  test_pyside_event_handling_mixin.py  test_quaternion.py  test_random.py  test_shader_lib.py  test_shaderlib.py  test_shaderlib_extra.py  test_text.py  test_texture.py  test_transform.py  test_util.py  test_vao.py  test_vec2.py  test_vec2_array.py  test_vec3.py  test_vec3_array.py  test_vec4.py  test_vec4_array.py
